--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   h1{text-align:center;color:var(--acento);margin:0 0 1rem;}
   .panel{background:var(--panel);padding:20px;margin-bottom:20px;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,0.4);}
   h2{color:var(--acento);margin-top:0;}
+  /* Nuevo estilo para el título del panel expandible */
+  h2.toggle-header { cursor: pointer; display: flex; justify-content: space-between; align-items: center; }
+  h2.toggle-header .arrow { transition: transform 0.3s; }
+  h2.toggle-header.expanded .arrow { transform: rotate(180deg); }
+
   input,select,button{width:100%;padding:10px;margin-top:8px;border:none;border-radius:8px;font-size:1rem;}
   input,select{background:#27354a;color:var(--texto);}
   button{background:var(--acento);color:#fff;font-weight:bold;cursor:pointer;transition:background 0.2s;border:none;}
@@ -56,13 +61,11 @@
 
 <h1>💰 Finanzas Diarias</h1>
 
-<!-- Iconos import / export -->
 <div class="icon-bar">
   <button class="icon-btn" title="Importar respaldo" onclick="importarRespaldo()">⬆️</button>
   <button class="icon-btn" title="Exportar respaldo" onclick="exportarRespaldo()">⬇️</button>
 </div>
 
-<!-- === Moneda y Tasa de cambio (solo lectura) === -->
 <div class="panel">
   <h2>Moneda de visualización</h2>
   <label>Moneda
@@ -76,7 +79,6 @@
   <small>Los datos se guardan en <strong>USD</strong> y solo se convierten al mostrar.</small>
 </div>
 
-<!-- === Página Principal === -->
 <div id="paginaPrincipal">
   <div class="panel">
     <h2>Registrar Movimiento</h2>
@@ -88,11 +90,7 @@
     </label>
     <label>Monto (USD)<input type="number" id="monto" placeholder="Ej: 150.00"></label>
     <label>Billetera
-      <select id="billetera">
-        <option>PayPal</option><option>Payoneer</option><option>Hotmart</option>
-        <option>Yape</option><option>Western Union</option><option>MoneyGram</option>
-        <option>Binance</option><option>Efectivo</option>
-      </select>
+      <select id="billetera"></select>
     </label>
     <label>Fecha
       <input type="date" id="fechaMov">
@@ -113,8 +111,8 @@
     </div>
   </div>
 
-  <div class="panel" style="cursor:pointer;" onclick="abrirPaginaVentas()">
-    <h2>Ventas del Día (clic para ver estadísticas)</h2>
+  <div class="panel" style="cursor:pointer;" onclick="window.location.href='estadisticas.html'">
+  <h2>Ventas del Día (clic para ver estadísticas)</h2>
     <div class="balance-item verde" style="margin:auto;max-width:220px;">
       <strong>Total vendido hoy</strong><br><span id="ventasHoy">0</span>
     </div>
@@ -123,6 +121,21 @@
   <div class="panel">
     <h2>Saldos por Billetera</h2>
     <div class="saldos" id="saldos"></div>
+  </div>
+
+  <div class="panel">
+    <h2 class="toggle-header" onclick="toggleWallets()">
+      <span>Administrar Billeteras</span>
+      <span class="arrow">▼</span>
+    </h2>
+    <div id="walletsContainer" style="display:none;">
+      <div class="saldos" id="listaBilleteras"></div>
+      <label>
+        Nueva billetera
+        <input type="text" id="nuevaBilleteraInput" placeholder="Ej: Billetera Nueva">
+      </label>
+      <button onclick="agregarBilletera()">Añadir billetera</button>
+    </div>
   </div>
 
   <div class="panel">
@@ -140,7 +153,6 @@
   </div>
 </div>
 
-<!-- === Página Ventas === -->
 <div id="paginaVentas">
   <button onclick="cerrarPaginaVentas()" style="margin-bottom:15px;">⬅️ Volver</button>
   <div class="panel">
@@ -166,11 +178,18 @@ const LS_KEY="finanzasMovimientos";
 const LS_BACKUP_KEY="finanzas_backup";
 let movimientos = JSON.parse(localStorage.getItem(LS_KEY)) || [];
 
+const WALLETS_LS_KEY = 'finanzasWallets';
+let billeteras = JSON.parse(localStorage.getItem(WALLETS_LS_KEY)) || ["PayPal","Payoneer","Hotmart","Yape","Western Union","MoneyGram","Binance","Efectivo"];
+
 /* guarda y también respalda automáticamente en otra clave */
 function guardar(){
   localStorage.setItem(LS_KEY, JSON.stringify(movimientos));
   // respaldo local automático (por si acaso)
   try { localStorage.setItem(LS_BACKUP_KEY, JSON.stringify({at: new Date().toISOString(), data: movimientos})); } catch(e) {}
+}
+
+function guardarBilleteras(){
+  localStorage.setItem(WALLETS_LS_KEY, JSON.stringify(billeteras));
 }
 
 /* ========== Import / Export (respaldo) ========== */
@@ -297,6 +316,51 @@ function formatCurrency(v){
 }
 document.getElementById('monedaSelect').addEventListener('change', renderTodo);
 
+/* ========== Billeteras: agregar/eliminar/render ========== */
+function agregarBilletera(){
+  const input = document.getElementById('nuevaBilleteraInput');
+  const nombre = input.value.trim();
+  if(!nombre || billeteras.includes(nombre)) return;
+  billeteras.push(nombre);
+  input.value = '';
+  guardarBilleteras();
+  renderWallets();
+  renderTodo();
+}
+
+function eliminarBilletera(nombre){
+  if(!confirm(`¿Eliminar la billetera "${nombre}"?`)) return;
+  billeteras = billeteras.filter(b => b !== nombre);
+  guardarBilleteras();
+  renderWallets();
+  renderTodo();
+}
+
+function renderWallets(){
+  const select = document.getElementById('billetera');
+  select.innerHTML = billeteras.map(b => `<option>${b}</option>`).join('');
+
+  const lista = document.getElementById('listaBilleteras');
+  lista.innerHTML = billeteras.map(b => `
+    <div class="saldo-box" style="display:flex;align-items:center;justify-content:space-between;">
+      <span>${b}</span>
+      <button onclick="event.stopPropagation();eliminarBilletera('${b}')" style="width:auto;padding:4px 8px;font-size:0.8rem;background:var(--rojo);">X</button>
+    </div>
+  `).join('');
+}
+
+function toggleWallets() {
+  const container = document.getElementById('walletsContainer');
+  const title = document.querySelector('.toggle-header');
+  if (container.style.display === 'none') {
+    container.style.display = 'block';
+    title.classList.add('expanded');
+  } else {
+    container.style.display = 'none';
+    title.classList.remove('expanded');
+  }
+}
+
 /* ========== Movimientos: agregar/editar/eliminar ========== */
 function agregarMovimiento(){
   const tipo = document.getElementById('tipo').value;
@@ -317,15 +381,35 @@ function agregarMovimiento(){
 function editarMovimiento(id){
   const m = movimientos.find(x => x.id === id);
   if(!m) return;
+  
   const nuevoMonto = parseFloat(prompt("Nuevo monto (USD):", m.monto));
-  if(isNaN(nuevoMonto) || nuevoMonto <= 0) return;
-  const nuevaFecha = prompt("Nueva fecha (AAAA-MM-DD):", m.fecha.slice(0,10));
-  if(nuevaFecha && !/^\d{4}-\d{2}-\d{2}$/.test(nuevaFecha)) return alert("Formato de fecha inválido");
+  if(isNaN(nuevoMonto) || nuevoMonto <= 0) {
+    if (nuevoMonto !== null) {
+      alert("Monto inválido");
+    }
+    return;
+  }
+  
+  const fechaActual = new Date(m.fecha).toISOString().slice(0, 10);
+  const nuevaFechaStr = prompt("Nueva fecha (AAAA-MM-DD):", fechaActual);
+  
+  if (nuevaFechaStr && !/^\d{4}-\d{2}-\d{2}$/.test(nuevaFechaStr)) {
+    alert("Formato de fecha inválido. Por favor, use AAAA-MM-DD.");
+    return;
+  }
+  
   const nuevaDesc = prompt("Nueva descripción:", m.desc || "");
+  
   m.monto = nuevoMonto;
-  if(nuevaFecha) m.fecha = new Date(nuevaFecha + "T12:00:00").toISOString();
+  
+  if (nuevaFechaStr) {
+    m.fecha = new Date(nuevaFechaStr + "T12:00:00").toISOString();
+  }
+
   m.desc = nuevaDesc;
-  guardar(); renderTodo();
+  
+  guardar();
+  renderTodo();
 }
 
 function eliminarMovimiento(id){
@@ -346,9 +430,7 @@ function renderTabla(filtroBilletera = null){
     if((!filtroMes || filtroMes === mesStr) && (!filtroBilletera || m.billetera === filtroBilletera)){
       const tr = document.createElement("tr");
       tr.className = m.tipo;
-      // botones deben detener propagación para no activar la fila al tocarlos
-      tr.innerHTML = `<td>${fecha.toLocaleDateString()}</td>
-        <td>${m.billetera}</td><td>${m.desc||''}</td>
+      tr.innerHTML = `<td>${fecha.toLocaleDateString()}</td><td>${m.billetera}</td><td>${m.desc||''}</td>
         <td>${m.tipo==='gasto'?'-':''}${formatCurrency(m.monto)}</td>
         <td class="acciones">
           <button onclick="event.stopPropagation();editarMovimiento(${m.id})">Editar</button>
@@ -366,10 +448,14 @@ function renderTabla(filtroBilletera = null){
 }
 
 function renderSaldos(){
-  const billeteras = ["PayPal","Payoneer","Hotmart","Yape","Western Union","MoneyGram","Binance","Efectivo"];
   const saldos = {};
   billeteras.forEach(b => saldos[b] = 0);
-  movimientos.forEach(m => { saldos[m.billetera] += m.tipo === 'ingreso' ? m.monto : -m.monto; });
+  movimientos.forEach(m => {
+    if(saldos.hasOwnProperty(m.billetera)){
+       saldos[m.billetera] += m.tipo === 'ingreso' ? m.monto : -m.monto;
+    }
+  });
+  
   const cont = document.getElementById("saldos");
   cont.innerHTML = "";
   billeteras.forEach(b => {
@@ -401,6 +487,9 @@ function renderVentasHoy(){
 }
 
 function renderTodo(){
+  // Ordenar los movimientos por fecha (de más nuevo a más antiguo)
+  movimientos.sort((a, b) => new Date(b.fecha) - new Date(a.fecha));
+
   renderTabla();
   renderSaldos();
   renderBalanceGeneral();
@@ -464,6 +553,7 @@ function mostrarEstadisticas(){
 }
 
 /* Init */
+renderWallets();
 renderTodo();
 
 /* PWA registration (opcional) */
